--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -51,6 +51,6 @@ jobs:
         with:
           context: .
           platforms: linux/amd64
-          push: false 
+          push: ${{ github.event_name != 'push' && github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
