test that read2tree is installed before pushing to dockerhub

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,6 +8,9 @@ on:
   release:
     type: [published]
 
+env:
+  TEST_TAG: dessimozlab/read2tree:test
+
 jobs:
 
   build:
@@ -44,6 +47,18 @@ jobs:
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+
+      -
+        name: Build and export to docker for testing
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          load: true
+          tags: ${{ env.TEST_TAG }}
+      -
+        name: Test
+        run: |
+          docker run --rm ${{ env.TEST_TAG }}
 
       -
         name: Build and push
