--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -61,6 +61,14 @@ jobs:
           docker run --rm ${{ env.TEST_TAG }}
 
       -
+        name: Login to DockerHub
+        if: github.event_name != 'pull_request' && github.event_name != 'push'
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+
+      -
         name: Build and push
         uses: docker/build-push-action@v3
         with:
