--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,7 +2,9 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ main ]
+    branches:
+    - main
+    - dev
   pull_request:
     branches: [ main ]
   release:
