--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -61,7 +61,7 @@ jobs:
         name: Test
         run: |
           docker run --rm -i -v $PWD/tests:/input -v $PWD/tests/:/reads -v $PWD/output:/out -v $PWD/run:/run ${{ env.TEST_TAG }} --tree --standalone_path /input/marker_genes --dna_reference /input/dna_ref.fa --reads /reads/sample_1.fastq --output_path /out/output --debug --threads 1
-          if [ ! -f output/tree_sample_1.nwk ] ; then exit 1; fi
+          if [ ! -f /out/output/tree_sample_1.nwk ] ; then exit 1; fi
       -
         name: Login to DockerHub
         if: github.event_name != 'pull_request' && github.event_name != 'push'
